warnings and errors - first idea